--- a/Java/JavaSQL/build.gradle
+++ b/Java/JavaSQL/build.gradle
@@ -14,8 +14,8 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     // https://mvnrepository.com/artifact/com.mysql/mysql-connector-j
     implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.32'
-    // https://mvnrepository.com/artifact/faker/faker
-    implementation group: 'faker', name: 'faker', version: '0.3.2'
+    // https://mvnrepository.com/artifact/com.github.javafaker/javafaker
+    implementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
 test {
