--- a/OcochosBarberia/build.gradle
+++ b/OcochosBarberia/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     compileOnly 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
+    implementation 'com.mysql:mysql-connector-j:8.0.32'
+    implementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
 test {
